# Deep-Deliberate

./: .env.example  LICENSE  README.md  deepdeliberate.py  pyproject.toml  verify_setup.py
deepdeliberate/: __init__.py  cli.py
deepdeliberate/config/: .env.template  __init__.py  config_template.json  manager.py  portability.py  validation.py  versioning.py
deepdeliberate/core/: __init__.py  agent_discovery.py  agent_executor.py  agent_executor_interface.py  async_deepseek_client.py  async_improvements.py  deepseek_client.py  deepseek_display.py  enhanced_evaluator.py  evaluator.py  exceptions.py  execution_modes.py  framework_core.py  input_sanitizer.py  interfaces.py  logging_config.py  models.py  orchestration.py  query_generator.py  response_parser.py  session_logger.py  settings.py  validators.py
scripts/: deploy.py  diagnostics.py  setup_environment.py  setup_wizard.py  validate_config.py  validate_environment.py
setup/: README.md
setup/agents/: customer_service_agent.py  education_agent.py  healthcare_agent.py
setup/configs/: customer_service_config.json  education_config.json  healthcare_config.json
test_results/customer_service/: session_session_20250914_223125_0e08d81f_20250914_223125_checkpoints.json  session_session_20250914_223125_0e08d81f_20250914_223125_decisions.csv  session_session_20250914_223125_0e08d81f_20250914_223125_interactions.csv  session_session_20250914_223125_0e08d81f_summary.json
